Added 'Sending..' animation for more responsive view
* When sending a message and takes a while, the UI will show a
  'Sending..' message to indicate that it's working on sending data.
* Reverted API security changes as it bugged sending messages of files
  only.
* Fixed some typos in 'readme.md'.
* Updated 'notes.md'.

--- a/pb_public/index.html
+++ b/pb_public/index.html
@@ -14,6 +14,9 @@
 		</select>
 		
 		<section class="data-input">
+			<div class="sending d-none">
+				<p>Sending...</p>
+			</div>
 			<textarea class="input-text"></textarea>
 			<label class="icon-wrapper" onclick="fileInput(this)">
 				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 16 16">
